Fix(Auth):fix the dto response in the auth